--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,16 +2,27 @@ name: Packer Build
 
 on:
   push:
-    tags:
-      - v*
+    branches:
+      - main
+    # tags:
+    #   - v*
 env:
   GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.PACKER_SA_KEY }}
 jobs:
-  build:
+  packer-build:
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout Packer project
         uses: actions/checkout@v2
+
+      # validate templates
+      - name: Validate Template
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: validate
+          arguments: -syntax-only
+          target: runner-machine-image.pkr.hcl
+
       - name: Dummy step
         run: |
           echo "packer build -var=\"ghrunner_version=${GITHUB_REF_NAME}\" -var-file=\"machine-image.pkrvars.hcl\" runner-machine-image.pkr.hcl"
