--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,5 +26,5 @@ jobs:
         uses: hashicorp/packer-github-actions@master
         with:
           command: build
-          arguments: "-on-error=abort -var=\"ghrunner_version=${GITHUB_REF_NAME}\" -var-file=\"machine-image.pkrvars.hcl\""
+          arguments: "-on-error=abort -var=\"ghrunner_version=${GITHUB_REF_NAME}\" -var-file=\"runtime-variables.pkrvars.hcl\""
           target: runner-machine-image.pkr.hcl
