--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,12 @@ jobs:
       - name: Checkout Packer project
         uses: actions/checkout@v2
 
+      # init plugins
+      - name: Init plugins
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: init
+
       # validate templates
       - name: Validate Template
         uses: hashicorp/packer-github-actions@master
