--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - name: Checkout Packer project
         uses: actions/checkout@v2
+      
+      # packer init
+      - name: Packer Init
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: init
 
       # validate templates
       - name: Validate Template
