--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,10 +16,12 @@ jobs:
         uses: actions/checkout@v2
       
       # packer version
-      - name: Packer Version
-        uses: hashicorp/packer-github-actions@master
-        with:
-          command: version
+      - name: Packer Installation
+        run: |
+          curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+          sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+          sudo apt-get update && sudo apt-get install packer
+          packer
       
       # # packer init
       # - name: Packer Init
