--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build Packer Artifact
         run: |
-          packer build -on-error=abort -var="ghrunner_version=v2.283.3" -var-file="runtime-variables.pkrvars.hcl"
+          packer build -var='ghrunner_version=v2.283.3' -var-file='runtime-variables.pkrvars.hcl'
       
       # # build artifact
       # - name: Build Artifact
