Set needs=setup-gcloud to packer-build job

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,7 @@ jobs:
 
   packer-build:
     runs-on: ubuntu-18.04
+    needs: [ 'setup-gcloud' ]
     steps:
       - name: Checkout Packer project
         uses: actions/checkout@v2
