--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,7 @@ jobs:
       - name: Use gcloud CLI
         run: |
           gcloud info
+          ls -la $HOME/.config/gcloud
 
   # packer-build:
   #   runs-on: ubuntu-18.04
