See gcloud info

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,7 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.PACKER_SA_KEY }}
           export_default_credentials: true
+          credentials_file_path: $HOME/.config/gcloud/application_default_credentials.json
 
       - name: Use gcloud CLI
         run: |
