--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Build Packer Artifact
         env:
-          PACKER_SA_KEY: ${{ secret.PACKER_SAK_KEY }}
+          PACKER_SA_KEY: ${{ secret.PACKER_SA_KEY }}
           GOOGLE_APPLICATION_CREDENTIALS: /home/runner/packer_sa_key.json
         run: |
           echo ${PACKER_SA_KEY} > /home/runner/packer_sa_key.json
