--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,17 +11,18 @@ jobs:
       - name: Checkout Packer project
         uses: actions/checkout@v2
 
-      - name: Packer Init
+      - name: Export Application Credentials
         run: |
-          curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
-          sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
-          sudo apt-get update && sudo apt-get install packer
-          packer init .
-
-      - name: Build Packer Artifact
+          echo ${PACKER_SA_KEY} > $GOOGLE_APPLICATION_CREDENTIALS
         env:
           PACKER_SA_KEY: ${{ secrets.PACKER_SA_KEY }}
           GOOGLE_APPLICATION_CREDENTIALS: /home/runner/packer_sa_key.json
-        run: |
-          echo ${PACKER_SA_KEY} > /home/runner/packer_sa_key.json
-          packer build -var="ghrunner_version=$GITHUB_REF_NAME" -var-file="runtime-variables.pkrvars.hcl" .
+
+      - name: Build Artifact
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: build
+          arguments: "-var=ghrunner_version=$GITHUB_REF_NAME -var-file=runtime-variables.pkrvars.hcl"
+          target: .
+        env:
+          PACKER_LOG: 1
