Add initialization step to build workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,11 +18,15 @@ jobs:
           PACKER_SA_KEY: ${{ secrets.PACKER_SA_KEY }}
           GOOGLE_APPLICATION_CREDENTIALS: /home/runner/packer_sa_key.json
 
+      - name: Initialize Packer Plugin Binaries
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: init
+          target: .
+
       - name: Build Artifact
         uses: hashicorp/packer-github-actions@master
         with:
           command: build
           arguments: "-var=ghrunner_version=$GITHUB_REF_NAME -var-file=runtime-variables.pkrvars.hcl"
           target: .
-        env:
-          PACKER_LOG: 1
