--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,9 +13,8 @@ jobs:
 
       - name: Export Application Credentials
         run: |
-          echo ${PACKER_SA_KEY} > $GOOGLE_APPLICATION_CREDENTIALS
+          echo ${{ secrets.PACKER_SA_KEY }} > $GOOGLE_APPLICATION_CREDENTIALS
         env:
-          PACKER_SA_KEY: ${{ secrets.PACKER_SA_KEY }}
           GOOGLE_APPLICATION_CREDENTIALS: /home/runner/packer_sa_key.json
 
       - name: Initialize Packer Plugin Binaries
