Add initialization step to lint workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Initialize Packer Plugin Binaries
+        uses: hashicorp/packer-github-actions@master
+        with:
+          command: init
+          target: .
+
       - name: Validate Template
         uses: hashicorp/packer-github-actions@master
         env:
