--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -6,7 +6,6 @@ on:
   push:
     branches:
       - main
-    pull_requests:
 jobs:
   validate:
     runs-on: ubuntu-18.04
@@ -26,5 +25,5 @@ jobs:
           DUMMY_VERSION_FOR_CODE_VALIDATION: v1.0.0
         with:
           command: validate
-          arguments: "-var=ghrunner_version=${DUMMY_VERSION_FOR_CODE_VALIDATION} -var-file=runtime-variables.pkrvars.hcl"
+          arguments: -var=ghrunner_version=${DUMMY_VERSION_FOR_CODE_VALIDATION} -var-file=runtime-variables.pkrvars.hcl
           target: .
