--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -25,5 +25,5 @@ jobs:
           DUMMY_VERSION_FOR_CODE_VALIDATION: v1.0.0
         with:
           command: validate
-          arguments: -var=ghrunner_version=${DUMMY_VERSION_FOR_CODE_VALIDATION} -var-file=runtime-variables.pkrvars.hcl
+          arguments: -var=ghrunner_version=$DUMMY_VERSION_FOR_CODE_VALIDATION -var-file=runtime-variables.pkrvars.hcl
           target: .
