--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -21,9 +21,7 @@ jobs:
 
       - name: Validate Template
         uses: hashicorp/packer-github-actions@master
-        env:
-          DUMMY_VERSION_FOR_CODE_VALIDATION: v1.0.0
         with:
           command: validate
-          arguments: -var=ghrunner_version=$DUMMY_VERSION_FOR_CODE_VALIDATION -var-file=runtime-variables.pkrvars.hcl
+          arguments: -var=ghrunner_version=v1.0.0 -var-file=runtime-variables.pkrvars.hcl
           target: .
