Fix lint workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,11 +12,25 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+      
+      - name: Switch to GCP
+        run: cd gcp
 
-      - name: Initialize Packer Plugin Binaries
+      - name: Initialize Packer Plugin Binaries:GCP
         run: packer init .
 
-      - name: Validate Template
+      - name: Validate Template:GCP
+        env:
+          PKR_VAR_project: dummy_value
+        run: packer validate .
+
+      - name: Switch to AWS
+        run: cd ../aws
+        
+      - name: Initialize Packer Plugin Binaries:AWS
+        run: packer init .
+
+      - name: Validate Template:AWS
         env:
           PKR_VAR_project: dummy_value
         run: packer validate .
