--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -25,6 +25,6 @@ jobs:
         run: packer init ./aws
 
       - name: Validate Template:AWS
-        env:
-          PKR_VAR_source_image: dummy_value
-        run: packer validate ./aws
+        run: |
+          packer validate -var-file=./aws/amd64.pkrvars.hcl ./aws
+          packer validate -var-file=./aws/arm64.pkrvars.hcl ./aws
