--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: true
       matrix:
         provider: [gcp, aws]
-        arch: [amd64, arm64]
+        # arch: [amd64, arm64]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
