--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -33,9 +33,9 @@ jobs:
       - name: Validate template - ${{ matrix.provider }} ${{ matrix.arch }}
         run: |
           if[[ -e ${{ matrix.provider }}/${{ matrix.arch }}/values.pkrvars.hcl ]]; then
-            echo 'Exists'
+            echo Exists
           else
-            echo 'Doesn't exist'
+            echo Doesn't exist
           fi
 
 
