Test matrix workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - main
-      - aws-packer-setup-ivan
+      - aws-packer-setup-ivan # TODO: remove
 
 jobs:
   init:
@@ -32,7 +32,7 @@ jobs:
     steps:
       - name: Validate template - ${{ matrix.provider }}(${{ matrix.arch }})
         run: |
-          if[[ -f "${{ matrix.provider }}/${{ matrix.arch }}/values.pkrvars.hcl" ]]; then
+          if[[ -f "${{ matrix.provider }}/${{ matrix.arch }}/values.pkrvars.hcl" ]]
             echo Exists
           else
             echo Doesn't exist
