--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -32,6 +32,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
           ref: aws-packer-setup-ivan
       - name: Validate template - ${{ matrix.provider }}(${{ matrix.arch }})
         run: |
