Test matrix workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -36,6 +36,7 @@ jobs:
           ref: aws-packer-setup-ivan
       - name: Validate template - ${{ matrix.provider }}(${{ matrix.arch }})
         run: |
+          cd ${{ matrix.provider }}
           ls -la
 
 
