--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Validate template - ${{ matrix.provider }}(${{ matrix.arch }})
         run: |
-          if[[ -d $(pwd)/${{ matrix.provider }}/${{ matrix.arch }} ]]
+          if[[ -d ${{ matrix.provider }}/${{ matrix.arch }} ]]
             cd $(pwd)/${{ matrix.provider }}/${{ matrix.arch }}
             ls -la
           else
