Test matrix workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -33,9 +33,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
       - name: Validate template - ${{ matrix.provider }}(${{ matrix.arch }})
-        shell: bash
         run: |
-          if( -d ${{ matrix.provider }}/${{ matrix.arch }} )
+          if test -d ${{ matrix.provider }}/${{ matrix.arch }}; then
             cd $(pwd)/${{ matrix.provider }}/${{ matrix.arch }}
             ls -la
           else
