--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -34,9 +34,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Validate template - ${{ matrix.provider }}(${{ matrix.arch }})
         run: |
-          if test -d ${{ matrix.provider }}/${{ matrix.arch }}; then
-            cd $(pwd)/${{ matrix.provider }}/${{ matrix.arch }}
-            ls -la
+          if test -d ${{ matrix.provider }}/${{ matrix.arch }}/values.pkrvars.hcl; then
+            echo 'Exists'
           else
             echo 'Does not exist'
           fi
