--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Validate template - ${{ matrix.provider }}(${{ matrix.arch }})
         run: |
-          if test -d ${{ matrix.provider }}/${{ matrix.arch }}/values.pkrvars.hcl; then
+          if test -f ${{ matrix.provider }}/${{ matrix.arch }}/values.pkrvars.hcl; then
             echo 'Exists'
           else
             echo 'Does not exist'
